added emails tab

--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -26,6 +26,7 @@ en-US:
   tab_contacts: Contacts
   tab_opportunities: Opportunities
   tab_team: Team
+  tab_emails: Emails
   admin_tab_groups: Groups
   admin_tab_users: Users
   admin_tab_fields: Custom Fields
