--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -355,6 +355,7 @@ en-US:
   campaign_summary: Campaign Summary
   campaign_targets: Campaign Targets
   campaign_statuses: Campaign Statuses
+  campaign_stats: Campaign Statistics
   campaigns: Campaigns
   campaigns_options: Campaigns Options
   campaigns_small: campaigns
@@ -845,6 +846,7 @@ en-US:
   save_field_group: Save field group
   field_group_empty: There are no fields in this group.
   select_or_create_tags: Select some tags, or create a new tag by pressing 'enter'.
+  select_email_designs: Select some email designs.
   restrict_by_tag: ! 'Restrict by Tag:'
   restrict_by_tag_info: (Only show fields for %{assets} that are tagged with the following)
   field_group_tag_restriction: This field group applies to %{assets} tagged with "%{tag}"
@@ -863,6 +865,7 @@ en-US:
 
 '
   tags: Tags
+  email_designs: Email Designs
   tag_small: tag
   tagged: Tagged
   create_tag: Create Tag
