Add promotion to campaigns

--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -313,6 +313,7 @@ en-US:
   account: Account
   account_id: Account
   select_an_account: Select an Account
+  select_an_promotion: Select an Promotion
   account_small: account
   account_summary: Account Summary
   account_categories: Account Categories
