Add promotion to campaign page Change route Fix ui bugs

--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -357,6 +357,7 @@ en-US:
   campaign_targets: Campaign Targets
   campaign_statuses: Campaign Statuses
   campaign_stats: Campaign Statistics
+  campaign_promotions: Campaign Promotions
   campaigns: Campaigns
   campaigns_options: Campaigns Options
   campaigns_small: campaigns
